# History-panel

./: .anjuta_sym_db.db  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac  libtool
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: Makefile  config.h  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  history_panel_prototype
Debug/src/.deps/: main.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  history_panel_prototype  main.c  main.c~
src/.deps/: main.Po
